fixed overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,8 @@
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
-  // position: relative;
+  overflow: hidden;
+ 
 }
 
 header {
@@ -32,6 +33,7 @@ header {
       color: $whiteText;
       font-family: 'Raleway', sans-serif;
       padding: 0 .5em .5em .5em;
+      max-width: 365px;
     }
 
   }
@@ -81,7 +83,6 @@ main {
 
 
 footer {
-  left: 0;
   width: 100%;
   background-color: $whiteText;
   text-align: center;
